# mcp

./: build.gradle  settings.gradle
.github/workflows/: android.yml
app/: build.gradle
app/libnode/include/node/: PLACE_NODE_HEADERS_HERE.txt
app/src/main/: AndroidManifest.xml
app/src/main/assets/manual/: user_manual.txt
app/src/main/assets/mcp/samples/: initialize.request.json  tools.call.python.request.json  tools.list.request.json
app/src/main/assets/node/: bootstrap.js  index.js  package.json
app/src/main/assets/node/services/: tool_registry.js  web_scraper.js
app/src/main/assets/python/: bootstrap.py
app/src/main/assets/python/mcp_services/: __init__.py  http_fetcher.py
app/src/main/cpp/: CMakeLists.txt  native_processor.cpp  node_runtime_bridge.cpp
app/src/main/java/com/micklab/mcp/: MainActivity.java  McpApplication.java
app/src/main/java/com/micklab/mcp/api/: CustomHttpApiDefinition.java  CustomHttpApiInvoker.java  CustomHttpApiStore.java  CustomHttpApiToolHandler.java
app/src/main/java/com/micklab/mcp/mcp/: Jsons.java
app/src/main/java/com/micklab/mcp/mcp/protocol/: JsonRpcRequest.java
app/src/main/java/com/micklab/mcp/runtime/: AssetInstaller.java  McpRuntimeBootstrap.java  NativeImageBridge.java  NodeJS.java  NodeRuntimeBridge.java  PythonRuntimeBridge.java
app/src/main/java/com/micklab/mcp/security/: RuntimeSecurityPolicy.java
app/src/main/java/com/micklab/mcp/service/: McpForegroundService.java
app/src/main/jniLibs/arm64-v8a/: PLACE_PREBUILT_SHARED_LIBS_HERE.txt
app/src/main/jniLibs/x86_64/: PLACE_PREBUILT_SHARED_LIBS_HERE.txt
app/src/main/res/layout/: activity_main.xml
(+10 files in other folders)
